--- a/features/src/main/res/values/strings.xml
+++ b/features/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="test_textview">Recommended Hotel</string>
+    <string name="test_hotel">Brindavan</string>
+    <string name="test_amount">Rs. 2000</string>
 </resources>
