--- a/features/src/main/res/values/strings.xml
+++ b/features/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="test_textview">Recommended Hotel</string>
     <string name="test_hotel">Brindavan</string>
     <string name="test_amount">Rs. 2000</string>
+    <string name="test_flight">Air India</string>
 </resources>
