--- a/features/src/main/res/values/strings.xml
+++ b/features/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="test_amount">Rs. 2000</string>
     <string name="test_flight">Air India</string>
     <string name="choose_flight">Choose flight</string>
+    <string name="book">Book</string>
 </resources>
